hphp/hack/test/typecheck/records/record_inheritance_nonexistent.php
<?hh

record B extends NoSuchRecord {
}
